Implement chat lead and transcript functionality - Add new API endpoints for capturing chat leads and storing conversation transcripts, enhance the AIHeroSection to include lead capture form, and update package.json for new dependencies. Modify Vercel configuration for build process and adjust CORS settings in API handlers.

--- a/vercel.json
+++ b/vercel.json
@@ -1,16 +1,17 @@
 {
   "version": 2,
-  "buildCommand": "npm run build:vercel",
-  "outputDirectory": "dist",
+  "buildCommand": "npm run build",
+  "outputDirectory": "dist/public",
   "functions": {
-    "api/**/*.js": {
+    "api/**/*.ts": {
       "memory": 1024,
-      "maxDuration": 10
+      "maxDuration": 30,
+      "includeFiles": "corpus/**/*"
     }
   },
   "routes": [
     { "src": "/api/(.*)", "dest": "/api/$1" },
-    { "src": "/(.*\\.(js|css|png|jpg|jpeg|svg|ico|json))", "dest": "/public/$1" },
-    { "src": "/(.*)", "dest": "/public/index.html" }
+    { "handle": "filesystem" },
+    { "src": "/(.*)", "dest": "/index.html" }
   ]
-} 
+}
